--- a/trabalho_final/bibliografia.bib
+++ b/trabalho_final/bibliografia.bib
@@ -12,6 +12,13 @@
   Timestamp                = {2016.09.19}
 }
 
+@Electronic{ref1,
+	Title                    = {Redes Neurais: princípios e práticas},
+	Author                   = {H. Simon},
+	Year                     = {2001},
+	Owner                    = {2.ed, Porto Alegre: Bookman}]
+}
+
 @Electronic{imagenet,
   Title                    = {ImageNet},
   Author                   = {ImageNet},
