--- a/trabalho_final/atv.tex
+++ b/trabalho_final/atv.tex
@@ -325,48 +325,47 @@ aew
 
 
 \section{Perceptron de Rosenblatt}
-O perceptron de Rosenblatt implementa um classificador bin\'ario utilizando um neur\^onio. Tal neur\^onio \'e modelado como uma fun\c{c}\~ao $sgn$ aplicada a uma combina\c{c}\~ao linear das entradas:
+O perceptron de Rosenblatt foi uma das primeiras unidades de processamento baseada em neurônios biológicos, implementando classificadores mimetizando o funcionamento do cérebro de seres vivos. Esse perceptron foi a base do desenvolvimento de toda teoria de redes neurais. Analisemos nessa seção esse perceptron, sob um ponto de vista matemático. Considere uma variável de saída $y \in \mathbb{R}$ para entradas $\vec{x} \in \mathbb{R}^m$:
 
 \begin{center}
 	\includegraphics[scale=1]{rosenblattperceptron.png}
 	\captionof{figure}{ Perceptron de Rosenblatt \cite{livronnet} }
 \end{center} 
 
-Considerando a fun\c{c}\~ao $sgn$ devolvendo resultados entre $+1$ e $-1$:
+Matematicamente, temos:
 
-$$sgn(x) = \begin{cases}
-+1 \enspace \text{se } x > 0 \\
--1 \enspace \text{se } x < 0 \\
+$$ y = \varphi\bigg(  \big(\sum_{i=0}^m w_ix_i\big) + b \bigg)$$
+
+A função de ativação $\varphi$ utilizada por Rosenblatt em sua formulação clássica é a $sgn$, devolvendo resultados entre $+1$ e $-1$ conforme o sinal da entrada:
+
+$$sgn(z) = \begin{cases}
++1 \enspace \text{se } z > 0 \\
+-1 \enspace \text{se } z < 0 \\
 \end{cases}$$
 
-
-Temos o seguinte modelo para $y$:
-
-$$ y = sgn\bigg(  \big(\sum_{i=0}^m w_ix_i\big) + b \bigg)$$
-
 Reorganizando a equa\c{c}\~ao matricialmente:
-$$ X = \begin{bmatrix}
+$$ \vec{x} = \begin{bmatrix}
 x_1 \\
 x_2 \\
 ... \\
 x_m
 \end{bmatrix},
-W = \begin{bmatrix}
+\vec{w} = \begin{bmatrix}
 w_1 \\
 w_2 \\
 ... \\
 w_m
 \end{bmatrix} \Rightarrow
-y = sgn\bigg( \big(W^T\cdot X\big) + b \bigg)$$
+y = sgn\bigg( \big(\vec{w}^T\cdot \vec{x}\big) + b \bigg)$$
 
-Assim, podemos associar o output $y$ com duas classes $\mathcal{C}_1$ e $\mathcal{C}_2$, para os respectivos valores $+1$ e $-1$. Como a opera\c{c}\~ao envolvendo os inputs \'e puramente linear, h\'a uma correspond\^encia geom\'etrica interessante facilmente visualiz\'avel para duas dimens\~oes. Considerando um conjunto de dados com duas dimens\~oes, cada input $(x_1,x_2)$ pode ser plotado no $\mathbb{R}^2$. Assim, interpretando os par\^ametros $(W,b)$ do sistema como vetores:
+Assim, o output $y$ pode ser associado à duas classes $\mathcal{C}_1$ e $\mathcal{C}_2$, para os respectivos valores $+1$ e $-1$. Como a opera\c{c}\~ao envolvendo os inputs \'e puramente linear, h\'a uma correspond\^encia geom\'etrica interessante facilmente visualiz\'avel para duas dimens\~oes. Considerando um conjunto de dados com duas dimens\~oes, cada input $(x_1,x_2)$ pode ser plotado no $\mathbb{R}^2$. Assim, interpretando os par\^ametros $(\vec{w},b)$ do sistema como vetores:
 
 \begin{center}
 	\includegraphics[scale=1]{perceptron2d.png}
 	\captionof{figure}{ Interpreta\c{c}\~ao geom\'etrica para duas dimens\~oes \cite{livronnet} }
 \end{center} 
 
-Os pesos $(W,b)$ separam o espa\c{c}o de inputs em duas regi\~oes correspondentes a cada classe $\mathcal{C}_1$ e $\mathcal{C}_2$. Dado um conjunto $D$ de $N$ dados:
+Os pesos $(\vec{w},b)$ separam o espa\c{c}o de inputs em duas regi\~oes correspondentes a cada classe $\mathcal{C}_1$ e $\mathcal{C}_2$. Dado um conjunto $D$ de $N$ dados:
 $$D = \begin{bmatrix}
 d_1 \\
 d_2 \\
@@ -389,7 +388,7 @@ Y_{ref} = -1 \Leftarrow \Rightarrow X_{ref} \in R_2 \\
 Para estender a formula\c{c}\~ao para um n\'umero arbitr\'ario de classes, podemos utilizar mais neur\^onios. Assim, podemos definir um n\'umero qualquer de regi\~oes utilizando composi\c{c}\~oes de l\'ogica booleana. A combinação de diversos perceptrons e a generalização da função de transferência do neurônio resultou no desenvolvimento da teoria de Multi-Layer Perceptrons.
 
 \section{Multi-Layer Perceptrons}
-O Perceptron da arquitetura MLP \'e uma extens\~ao do perceptron de Rosenblatt. Assim, visa solucionar limita\c{c}\~oes pr\'aticas encontradas no modelo de Rosenblatt, como, por exemplo, a limita\c{c}\~ao \`a conjunto de dados linearmente separ\'aveis. Isso se deve principalmente a \`a fun\c{c}\~ao de ativa\c{c}\~ao do modelo, $sgn(.)$; e ao aumento no n\'umero de neur\^onios. O Perceptron de Multiplas Camadas (Multi-Layer Perceptron) utiliza diversos perceptrons de Rosenblatt com fun\c{c}\~oes de ativa\c{c}\~ao $\varphi(.)$ mais gen\'ericas, organizados em diversas camadas. Tais fun\c{c}\~oes $\varphi(.)$ devem ser cont\'inuas e diferenci\'aveis, como por exemplo:
+O Perceptron da arquitetura MLP \'e uma generalização do perceptron de Rosenblatt, utilizando diversos perceptrons de Rosenblatt com fun\c{c}\~oes de ativa\c{c}\~ao $\varphi(.)$ mais gen\'ericas, organizados em diversas camadas. Alguns exemplos de fun\c{c}\~oes $\varphi(.)$ cont\'inuas e diferenci\'aveis utilizadas:
 
 $$\varphi(x) = \begin{cases}
 tgh(x) = \frac{ e^x - e^{-x} } {e^x + e^{-x}} \\
@@ -459,31 +458,30 @@ w_{yik}  \varphi \Big(
 \sum_{j = 0}^{n_1}\big( w_{2kj}\big)  \varphi \big( \vec{x}  \vec{w_{1j}} ) \Big) 
 \bigg) \Bigg)$$
 
-Como podemos perceber, a complexidade da express\~ao relacionando os inputs e outputs aumenta consideravelmente com o aumento de camadas. A determina\c{c}\~ao dos pesos $W$ era um problema em aberto at\'e a d\'ecada de 80, quando foi proposto um algoritmo computacionalmente eficiente para encontra-los: o algoritmo de backpropagation. A implementa\c{c}\~ao realmente eficiente desse algoritmo s\'o foi poss\'ivel recentemente com a evolu\c{c}\~ao de GPUs, cuja capacidade computacional paralela \'e altissima. 
+Como podemos perceber, a complexidade da express\~ao relacionando os inputs e outputs aumenta consideravelmente com o aumento de camadas. Para a determina\c{c}\~ao dos pesos $W$, foi proposto na década de 80 o algoritmo de backpropagation em sua forma clássica.
 
 \subsection{Algoritmo de Backpropagation}
 
-O algoritmo de backpropagation \'e um metodo iterativo baseado em derivadas parciais. Explicaremos nessa se\c{c}\~ao o procedimento de maneira simplificada. O algoritmo formula o problema de determina\c{c}\~ao dos pesos como um problema de otimiza\c{c}\~ao, definindo uma vari\'avel de erro $e_{(W_k)}$. Seja $e_{(W_k)}$ uma fun\c{c}\~ao escalar cont\'inua e deriv\'avel dos pesos $W_k$, calculada para todos os exemplos do conjunto de treinamento $C_T$:
+O algoritmo de backpropagation \'e um metodo iterativo baseado em derivadas parciais. Explicaremos nessa se\c{c}\~ao o procedimento de maneira simplificada. O algoritmo formula o problema de determina\c{c}\~ao dos pesos como um problema de otimiza\c{c}\~ao, definindo uma vari\'avel de erro $e_{(W_k)}$. Considere $e_{(W_k)}$ como o erro RMS. Sejam $C_T$ o conjunto de treinamento, cada exemplo $c \in C_T$ e seu correspondente output de referência $y_c$, e $y_{i(W_k)}$ a previsão da rede para os pesos $W_k$:
 $$e_{(W_k)} = \sum_{c \in C_T} \frac{1}{2} (y_{c} - y_{i(W_k)})^2$$
 
-Ent\~ao, o algoritmo procura pelos pesos que minimizam esse erro de forma iterativa:
+O algoritmo essencialmente procura pelos pesos que minimizam esse erro de forma iterativa:
 $$W_{k+1} = W_k + \Delta W$$
 
-As hip\'oteses para converg\^encia do algoritmo de backpropagation s\~ao extremamente complexas e n\~ao ser\~ao tratadas nesse momento. Por simplicidade, assuma converg\^encia para algum $W_0$ e considere a k-\'esima itera\c{c}\~ao do algoritmo com fun\c{c}\~ao de erro $e_{(W_k)}$. H\'a duas etapas sequenciais no algoritmo:
+As hip\'oteses para converg\^encia do algoritmo de backpropagation n\~ao ser\~ao tratadas nesse momento. Por simplicidade, assuma converg\^encia para algum $W_0$ e considere a k-\'esima itera\c{c}\~ao do algoritmo com fun\c{c}\~ao de erro $e_{(W_k)}$. H\'a duas etapas sequenciais no algoritmo:
 
 Os inputs $\vec{x}$ s\~ao propagados at\'e o output $\vec{y}$ considerando os pesos atuais $W_k$. Todos os outputs $h_1$, $h_2$ e $y$ s\~ao calculados a partir das entradas $\vec{x}$, de acordo com as express\~oes deduzidas anteriormente. Al\'em dos outputs, \'e calculado o erro $e_{(W_k)}$.  Como $e_{(W_k)}$ \'e uma fun\c{c}\~ao cont\'inua e deriv\'avel em rela\c{c}\~ao \`a $W_k$, \'e poss\'ivel fazer uma an\'alise de sensibilidade num\'erica. Especificamente, estamos interessados na varia\c{c}\~ao local $\Delta W$ capaz de provocar um decr\'escimo local no erro $e_{(W_k)}$.
 
-\subsubsection{Backward Pass}
 
 Considere a decomposi\c{c}\~ao em s\'erie de Taylor de uma fun\c{c}\~ao $f_{(x)}$ cont\'inua e deriv\'avel:
 
 $$f_{(x)} \simeq f_{(x_0)} + \frac{ \partial f_{(x_0)} } {\partial x} (x - x_0) + ... +
 \frac{ \partial^n f_{(x_0)} } {\partial x^n} \frac{ (x - x_0)^n } { n! } + ...$$
 
-O backpropagation em sua forma classica prop\~oe a lineariza\c{c}\~ao da fun\c{c}\~ao de erro $e_{(W_k)}$, analisando a primeira componente linear da decomposi\c{c}\~ao de Taylor para o erro $e_{(W_{k+1})}$:
+O backpropagation em sua forma classica prop\~oe a lineariza\c{c}\~ao da fun\c{c}\~ao de erro $e_{(W_k)}$, analisando a primeira componente linear da decomposi\c{c}\~ao de Taylor para o erro $e_{(W_{k+1})}$ em torno de $W_{k}$:
 
-$$e_{(W_{k+1})} \simeq e_{(W_{k})}  \frac{ \partial e_{(W_{k})} } { \partial W_k } (W_{k+1} - W_k)^T
-= e_{(W_{k})} + \frac{ \partial e_{(W_{k})} } { \partial W_k }(\Delta W)^T \Rightarrow$$
+$$e_{(W_{k+1})} \simeq e_{(W_{k})} + \frac{ \partial e_{(W_{k})} } { \partial W_k }^T (W_{k+1} - W_k)
+= e_{(W_{k})} + \frac{ \partial e_{(W_{k})} } { \partial W_k }^T(\Delta W) \Rightarrow$$
 
 $$e_{(W_{k+1})} \simeq e_{(W_{k})} + \begin{bmatrix}
 \frac{ \partial e_{(W_{k})} } { \partial w_{111} } & ...
@@ -502,12 +500,12 @@ Assim, podemos perceber que para diminuir o erro $\Delta W = \begin{bmatrix}
 \Delta w_{ijk}
 \end{bmatrix}$ deve ser tal que:
 
-$$ \frac{ \partial e_{(W_{k})} } { \partial W_k }(\Delta W) = \sum_{i,j,k} \frac{ \partial e_{(W_{k})} } { \partial w_{ijk} } \Delta w_{ijk} < 0  \Rightarrow $$
+$$ \frac{ \partial e_{(W_{k})} } { \partial W_k }^T(\Delta W) = \sum_{i,j,k} \frac{ \partial e_{(W_{k})} } { \partial w_{ijk} } \Delta w_{ijk} < 0  \Rightarrow $$
 
 Seja $\Delta W$ na dire\c{c}\~ao contr\'aria a $ \frac{ \partial e_{(W_{k})} } { \partial W_k }$:
 
 $$\Delta W = -  \frac{ \partial e_{(W_{k})} } { \partial W_k } \Rightarrow 
-\frac{ \partial e_{(W_{k})} } { \partial W_k }(\Delta W) = 
+\frac{ \partial e_{(W_{k})} } { \partial W_k }^T(\Delta W) = 
 \sum_{i,j,k} \frac{ \partial e_{(W_{k})} } { \partial w_{ijk} } \Big( - \frac{ \partial e_{(W_{k})} } { \partial w_{ijk} } \Big ) \Rightarrow $$
 
 $$ e_{(\Delta W)} \simeq e_{(W_k)}
@@ -523,9 +521,79 @@ $$e_{(\Delta W)} = e_{(W_k)}
 Ou seja, definindo $\Delta W$ no sentido contr\'ario de $ \frac{ \partial e_{(W_{k})} } { \partial W_k }$, garantimos um decr\'escimo de primeira ordem negativo no erro. Em particular, definindo: 
 $$\Delta W = - \eta  \frac{ \partial e_{(W_{k})} } { \partial W_k }  $$
 
-Podemos definir o tamanho do decr\'escimo no erro ap\'os cada itera\c{c}\~ao. Esse par\^ametro $\eta$ \'e comumente chamado de learning rate (taxa de aprendizado) na comunidade cient\'ifica. Pode-se calcular $ \frac{ \partial e_{(W_{k})} } { \partial W_k }$ utilizando teoria de derivadas parciais em fun\c{c}\~ao da topologia utilizada na rede ("regra da cadeia").
+Podemos definir o tamanho do decr\'escimo no erro ap\'os cada itera\c{c}\~ao. Esse par\^ametro $\eta$ \'e chamado de learning rate (taxa de aprendizado). Quanto menor o learning rate $\eta$, menores as varia\c{c}\~oes $\Delta W$. Consequentemente, cada variação fica mais próxima do ponto de linearização e portanto melhor \'e a aproxima\c{c}\~ao utilizada. Por outro lado, é necessário um tempo maior de treinamento ao utilizar learning rate $\eta$ baixos.
 
-Note que nessa formula\c{c}\~ao ignoramos os efeitos superiores \`a primeira ordem (resultantes de derivadas de ordens superiores). Quanto menor o learning rate $\eta$, menores as varia\c{c}\~oes $\Delta W$. Consequentemente, menores s\~ao os efeitos superiores \`a primeira ordem e portanto melhor \'e a aproxima\c{c}\~ao utilizada. Vale ressaltar que, embora n\~ao apresentado nessa se\c{c}\~ao, j\'a existem diversas varia\c{c}\~oes do algoritmo de backpropagation que consideram efeitos superiores \`a primeira ordem. 
+Pode-se calcular $ \frac{ \partial e_{(W_{k})} } { \partial W_k }$ através de derivadas parciais em fun\c{c}\~ao da topologia utilizada na rede (regra da cadeia). A seguir deduziremos as expressões das derivadas parciais para topologias profundas com funções de ativações sigmoidais.
+
+\subsection{Multi-layer Perceptrons com funções de ativação sigmoidais}
+
+Considere a seguinte rede neural:
+
+\begin{center}
+	\includegraphics[scale=0.8]{nnetsimples.png}
+	\captionof{figure}{ Rede neural simples \cite{livronnet} }
+\end{center} 
+
+Seja $a_i$ o output do i-\'esimo neur\^onio do modelo. Ou seja:
+
+
+$$a = \begin{cases}
+a_1 = \sigma\big( w_1 x + b_1\big) = \sigma( z_1 ) \\
+a_i = \sigma\big( w_i a_{i-1} + b_i\big) = \sigma( z_i ) \enspace \enspace i>1
+\end{cases}$$
+
+Onde $\sigma(.)$ \'e a fun\c{c}\~ao de ativa\c{c}\~ao do i-\'esimo neur\^onio. Analisemos a sensibilidade da fun\c{c}\~ao de perda $C$ em rela\c{c}\~ao ao primeiro bias $b_1$. Seja $\sigma(.)^{'}$ a derivada de $\sigma$:
+
+$$ \frac{\partial C}{\partial b_1} = \sigma^{'}(z_1) \cdot w_2 \cdot \sigma^{'}(z_2) \cdot w_3 \cdot \sigma^{'}(z_3) \cdot w_4 \cdot  \sigma^{'}(z_4)\cdot\frac{\partial C}{\partial a_4} = $$
+$$\frac{\partial C}{\partial b_1} =\bigg( \sigma^{'}(z_1) \cdot \sigma^{'}(z_2) \cdot \sigma^{'}(z_3) \cdot \sigma^{'}(z_4) \bigg)\bigg( w_2 w_3 w_4 \frac{\partial C}{\partial a_4}\bigg) $$
+
+Por outro lado, analisando a sensibilidade da fun\c{c}\~ao de perda C em rela\c{c}\~ao aos outros bias $b_i$:
+
+$$ \frac{\partial C}{\partial b_2} = \sigma^{'}(z_2) \cdot w_3 \cdot \sigma^{'}(z_3) \cdot w_4 \cdot  \sigma^{'}(z_4)\cdot\frac{\partial C}{\partial a_4} = $$
+$$ \frac{\partial C}{\partial b_2} = \bigg( \sigma^{'}(z_2) \cdot \sigma^{'}(z_3) \cdot \sigma^{'}(z_4) \bigg)\bigg( w_3 w_4 \frac{\partial C}{\partial a_4}\bigg) $$
+
+$$ \frac{\partial C}{\partial b_3} = \sigma^{'}(z_3) \cdot w_4 \cdot  \sigma^{'}(z_4)\cdot\frac{\partial C}{\partial a_4} \Rightarrow $$
+$$\frac{\partial C}{\partial b_3} = \bigg( \sigma^{'}(z_3) \cdot \sigma^{'}(z_4) \bigg)\bigg( w_4 \frac{\partial C}{\partial a_4}\bigg) $$
+
+$$ \frac{\partial C}{\partial b_4} =  \sigma^{'}(z_4)\cdot\frac{\partial C}{\partial a_4} $$
+
+Considerando a fun\c{c}\~ao $\sigma$ sigmoidal como visto em sala, $\sigma(z) = \frac{1}{1 + e^{-z}}$, temos:
+
+\begin{center}
+	\includegraphics[scale=0.8]{plotsig.png}
+	\captionof{figure}{ Plot de $\sigma(z)$}
+\end{center}
+
+E a derivada de $\sigma$:
+
+\begin{center}
+	\includegraphics[scale=0.8]{plotderiv.png}
+	\captionof{figure}{ Plot de $\sigma^{'}(z)$}
+\end{center}
+
+Como podemos perceber, $\sigma^{'}(z) \leq 0.25 \enspace \forall z$. Reorganizando os termos, em particular os termos $\frac{\partial C}{\partial b_4}$ e $\frac{\partial C}{\partial b_1}$, podemos perceber que:
+
+$$ \frac{\partial C}{\partial b_4} =  \sigma^{'}(z_4)\cdot\frac{\partial C}{\partial a_4} $$
+$$\frac{\partial C}{\partial b_1} =\bigg( \sigma^{'}(z_1) \cdot \sigma^{'}(z_2) \cdot \sigma^{'}(z_3) \cdot \sigma^{'}(z_4) \bigg)\bigg( w_2 w_3 w_4 \frac{\partial C}{\partial a_4}\bigg) \Rightarrow $$
+$$ \frac{\partial C}{\partial b_1} = \bigg( \sigma^{'}(z_1) \cdot \sigma^{'}(z_2) \cdot \sigma^{'}(z_3) \bigg)\bigg( w_2 w_3 w_4\bigg) \bigg( \sigma^{'}(z_4) \frac{\partial C}{\partial a_4} \bigg) \Rightarrow $$
+$$  \frac{\partial C}{\partial b_1} = \bigg( \sigma^{'}(z_1) \cdot \sigma^{'}(z_2) \cdot \sigma^{'}(z_3) \bigg)\bigg( w_2 w_3 w_4\bigg) \frac{\partial C}{\partial b_4} $$
+
+Como a derivada da sigmóide é limitada em $0.25$:
+
+$$\bigg( \sigma^{'}(z_1) \cdot \sigma^{'}(z_2) \cdot \sigma^{'}(z_3) \bigg)\bigg( w_2 w_3 w_4\bigg) \leq 0.25^3 \bigg( w_2 w_3 w_4\bigg) $$
+
+Portanto, $\frac{\partial C}{\partial b_1}$ e $\frac{\partial C}{\partial b_4}$ só terão a mesma ordem de grandeza se os pesos $w_i$ compensarem os termos $\sigma^{'}(z)$. Caso contrário, teremos $\frac{\partial C}{\partial b_1} <<< \frac{\partial C}{\partial b_4}$. Nesse caso, como o algoritmo de backpropagation corrige o peso $b_i$ com uma fração $\eta$ (learning rate) do gradiente $\frac{\partial C}{\partial b_i}$, as camadas mais próximas dos inputs variarão menos seus pesos comparados aos pesos das camadas mais próximas aos outputs.
+
+Para exemplificar essa situação, considere uma rede com 4 camadas escondidas com o mesmo número de neurônios, treinada em um dataset padrão de benchmark para algoritmos de classificação (MNIST, detalhado nos próximos capitulos). Para cada iteração do treino, a norma das alterações $\Delta w_i$ dos pesos foi plotado para inferir a velocidade de aprendizado durante o treino:
+
+\begin{center}
+	\includegraphics[scale=0.8]{vanishinggradient.png}
+\end{center}
+
+No experimento podemos perceber que a camada mais próxima dos outputs (hidden layer 4) tem seus pesos variados com mais intensidade durante todo o treinamento, desde o começo do algoritmo de backpropagation. O método de inicialização clássico para uma rede neural MLP consiste na utilização de pesos iniciais aleatórios, vindos de uma mesma distribuição. Por exemplo, uma distribuição gaussiana com média nula e desvio padrão unitário. Nesse caso, os pesos não serão tais a compensar os termos $\sigma^{'}(z)$. Consequentemente, temos uma inicialização com $\frac{\partial C}{\partial w_1} < \frac{\partial C}{\partial w_2} < \frac{\partial C}{\partial w_3} < ... $ que se mantêm durante todo o treinamento.
+
+Diversos pesquisadores se depararam com esse e outros problemas no treinamento de redes neurais com diversas camadas escondidas (comumente chamadas de profundas - deep). Em 2005 e 2006, surgem os primeiros algoritmos para inicialização de pesos resultando em treinamento eficiente para arquiteturas profundas. Em 2010, Alex Krizhevsky et al ganha uma das mais importantes competições de classificação com uma rede neural profunda com funções de ativação adequadas. Nesse contexto, surge o Deep Learning como conjunto de técnicas para melhorar o treinamento de redes profundas. No próximo capitulo indicaremos algumas técnicas já consolidadas no meio científico.
+
 \chapter{Deep Learning}
 
 \chapter{Redes Neurais Convolucionais}
@@ -630,7 +698,7 @@ Uma camada ReLU pode ser vista em ação na figura \ref{relus}:
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.8\textwidth]{imagens/relus}
-	\caption{Representação gráfica do funcionamento de uma camada ReLUs em uma rede convolucional. Fonte: \href{https://www.youtube.com/watch?v=FmpDIaiMIeA&t=943s}{https://www.youtube.com/watch?v=FmpDIaiMIeA&t=943s}.}
+	\caption{Representação gráfica do funcionamento de uma camada ReLUs em uma rede convolucional. Fonte: \href{https://www.youtube.com/watch?v=FmpDIaiMIeA\&t=943s}{https://www.youtube.com/watch?v=FmpDIaiMIeA\&t=943s}.}
 	\label{relus}
 \end{figure} 
 
